tests/snapshots/test_changelog__changelog_errors.snap
---
source: tests/changelog_tests/release_workflow.rs
expression: value
---
$ govctl release invalid-version
error[E0701]: Invalid semver version: invalid-version (gov/releases.toml)
exit: 1

$ govctl release 0.1.0
error[E0702]: Release 0.1.0 already exists (gov/releases.toml)
exit: 1
