tests/snapshots/test_changelog__changelog_setup.snap
---
source: tests/changelog_tests/release_workflow.rs
expression: value
---
$ govctl init
Created: gov
Created: gov/rfc
Created: gov/schema
Created: docs/rfc
Created: gov/adr
Created: gov/work
Created: gov/guard
Created: gov/conformance
Created: gov/templates
Created: gov/config.toml
Created: gov/schema/rfc.schema.json
Created: gov/schema/clause.schema.json
Created: gov/schema/adr.schema.json
Created: gov/schema/work.schema.json
Created: gov/schema/release.schema.json
Created: gov/schema/guard.schema.json
Created: gov/schema/conformance.schema.json
Created: gov/schema/loop-state.schema.json
Created: gov/schema/loop-round.schema.json
Created: .gitignore
✓ Project initialized
hint: To install agent skills locally: govctl init-skills
  Or install the govctl plugin:    /plugin install govctl@govctl
exit: 0

$ govctl work new Initial setup --active
Created work item: gov/work/<DATE>-initial-setup.toml
  ID: WI-<DATE>-001
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria --add add: Project scaffolding complete
Added 'add: Project scaffolding complete' to WI-<DATE>-001.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria --add add: Basic configuration
Added 'add: Basic configuration' to WI-<DATE>-001.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria[0] --tick done
Marked 'Project scaffolding complete' as done
exit: 0

$ govctl work edit WI-<DATE>-001 acceptance_criteria[1] --tick done
Marked 'Basic configuration' as done
exit: 0

$ govctl work move WI-<DATE>-001 done
Moved <DATE>-initial-setup.toml to done
exit: 0

$ govctl work new Bug fixes --active
Created work item: gov/work/<DATE>-bug-fixes.toml
  ID: WI-<DATE>-002
exit: 0

$ govctl work edit WI-<DATE>-002 acceptance_criteria --add fix: Memory leak in parser
Added 'fix: Memory leak in parser' to WI-<DATE>-002.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-002 acceptance_criteria --add fix: Crash on empty input
Added 'fix: Crash on empty input' to WI-<DATE>-002.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-002 acceptance_criteria[0] --tick done
Marked 'Memory leak in parser' as done
exit: 0

$ govctl work edit WI-<DATE>-002 acceptance_criteria[1] --tick done
Marked 'Crash on empty input' as done
exit: 0

$ govctl work move WI-<DATE>-002 done
Moved <DATE>-bug-fixes.toml to done
exit: 0

$ govctl release 0.1.0 --date 2026-01-15
Created release 0.1.0 (2026-01-15) with 2 work items
exit: 0
