tests/snapshots/test_changelog__changelog_unreleased.snap
---
source: tests/changelog_tests/release_workflow.rs
expression: value
---
$ govctl work new New features --active
Created work item: gov/work/<DATE>-new-features.toml
  ID: WI-<DATE>-003
exit: 0

$ govctl work edit WI-<DATE>-003 acceptance_criteria --add add: User authentication
Added 'add: User authentication' to WI-<DATE>-003.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-003 acceptance_criteria --add security: Password hashing
Added 'security: Password hashing' to WI-<DATE>-003.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-003 acceptance_criteria[0] --tick done
Marked 'User authentication' as done
exit: 0

$ govctl work edit WI-<DATE>-003 acceptance_criteria[1] --tick done
Marked 'Password hashing' as done
exit: 0

$ govctl work move WI-<DATE>-003 done
Moved <DATE>-new-features.toml to done
exit: 0

$ govctl work new API changes --active
Created work item: gov/work/<DATE>-api-changes.toml
  ID: WI-<DATE>-004
exit: 0

$ govctl work edit WI-<DATE>-004 acceptance_criteria --add changed: Response format to JSON
Added 'changed: Response format to JSON' to WI-<DATE>-004.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-004 acceptance_criteria --add deprecated: Legacy XML endpoint
Added 'deprecated: Legacy XML endpoint' to WI-<DATE>-004.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-004 acceptance_criteria --add removed: Obsolete v1 API
Added 'removed: Obsolete v1 API' to WI-<DATE>-004.acceptance_criteria
exit: 0

$ govctl work edit WI-<DATE>-004 acceptance_criteria[0] --tick done
Marked 'Response format to JSON' as done
exit: 0

$ govctl work edit WI-<DATE>-004 acceptance_criteria[1] --tick done
Marked 'Legacy XML endpoint' as done
exit: 0

$ govctl work edit WI-<DATE>-004 acceptance_criteria[2] --tick done
Marked 'Obsolete v1 API' as done
exit: 0

$ govctl work move WI-<DATE>-004 done
Moved <DATE>-api-changes.toml to done
exit: 0
